# Psy2

./: .dockerignore  .env  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  1.md  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  debug_redis.py  docker-compose.yml  init.sql  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  test_case.json  test_debug.py  test_ip_default.sh  test_ip_limit.sh  test_ip_limit_real.sh  test_ip_limit_simple.sh  test_mock_debug.py  test_turn.json
app/: main.py
docs/: API.md  admin-api.md
psy2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: e2e.sh  gen_api_md.py
tests/: conftest.py  test_admin.py  test_admin_llm_flags.py  test_async_diagnostics.py  test_case_session_turn.py  test_cli_case_loader.py  test_debug_rate_limit.py  test_debug_rate_limit2.py  test_debug_rate_limit3.py  test_deepseek_client.py  test_eval_metrics.py  test_generate_llm.py  test_guard.py  test_health.py  test_json_parse.py  test_kb_embed.py  test_logging_tracing.py  test_multi_session_report.py  test_normalize.py  test_pipeline_deepseek_flags.py  test_pipeline_full.py  test_pipeline_reasoning_e2e.py  test_pipeline_turn.py  test_policies.py  test_question_quality.py  test_rate_limit.py  test_rate_limit_fix.py  test_rate_limit_fix_order.py  test_rate_limit_simple.py  test_rate_limit_unit.py  test_reason.py  test_reason_llm.py  test_reason_llm_parse.py  test_report_missed.py  test_report_session.py  test_report_session_simple.py  test_retrieve.py  test_retrieve_clean.py  test_retrieve_old.py  test_retrieve_vector.py  (+7 more)
(+42 files in other folders)
